# project_game_story

./: README.md  game.py  ideas.md  model_node.py  model_story.py  node.py  pyproject.toml  story.py  story_setup.py  view.py
helpers/: node.py  story.py  tree.py
