[tool.poetry]
name = "project_game_story"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>", "britte <bgenzlinger@isf.edu.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inquirerpy = "^0.3.4"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
